--- a/src/index.html
+++ b/src/index.html
@@ -5,23 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Заголовок страницы</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <form action="" id="form">
-      <input type="text" id="input" placeholder="enter the search value please" />
-    </form>
-    <ul id="list">
-      <!-- <li>
+    <div class="search-engine">
+      <template>
+        <div class="form__container">
+          <form class="search-form" id="search-form">
+            <input
+              type="text"
+              name="query"
+              id="search"
+              autocomplete="off"
+              placeholder="Search images..."
+              class="form__input"
+            />
+            <button class="form__button" type="submit">Search</button>
+          </form>
+        </div>
+      </template>
+      <template>
+        <ul id="list">
+          <!-- <li>
         <img src="" data-src="" alt="" />
       </li> -->
-    </ul>
-    <button class="getmore">Get more results</button>
+        </ul>
+      </template>
+      <button class="load visually-hidden" type="button">Load More</button>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
