--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Заголовок страницы</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" href="../node_modules/basiclightbox/dist/basicLightbox.min.css" />
 
     <link
       rel="stylesheet"
@@ -36,13 +37,11 @@
           </form>
         </div>
       </template>
-      <template>
-        <ul id="list">
-          <!-- <li>
-        <img src="" data-src="" alt="" />
-      </li> -->
-        </ul>
-      </template>
+      <div class="list-container">
+        <template>
+          <ul id="list"></ul>
+        </template>
+      </div>
       <button class="load visually-hidden" type="button">Load More</button>
     </div>
     <script src="./index.js"></script>
