--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +22,7 @@
     />
   </head>
   <body>
-    <div class="search-engine">
+    <div class="search-engine" id="header">
       <template>
         <div class="form__container">
           <form class="search-form" id="search-form">
@@ -44,6 +45,15 @@
       </div>
       <button class="load visually-hidden" type="button">Load More</button>
     </div>
+    <button class="button button__scrollup">
+      <a href="#header"
+        ><svg widht="70" height="70" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path
+            d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 7.58l5.995 5.988-1.416 1.414-4.579-4.574-4.59 4.574-1.416-1.414 6.006-5.988z"
+          />
+        </svg>
+      </a>
+    </button>
     <script src="./index.js"></script>
   </body>
 </html>
